Feat: adding lombok in application and the h2 database